--- a/package.json
+++ b/package.json
@@ -1,40 +1,22 @@
 {
-  "name": "hot-tub-ui",
-  "description": "Controls the GG hot tub!",
+  "name": "gg-hot-tub-ui-vue3",
   "version": "1.0.0",
-  "author": "mproemsey <mproemsey@esdemc.com>",
-  "license": "MIT",
-  "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "dev": "vite --host",
+    "build": "vite build",
+    "preview": "vite preview --port 8081",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "axios": "^0.20.0",
-    "vue": "^2.5.11"
+    "axios": "^1.1.2",
+    "sass": "^1.55.0",
+    "vue": "^3.2.38",
+    "vue-router": "^4.1.5"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
-    "deepmerge": "^4.2.2",
-    "fibers": "^5.0.0",
-    "file-loader": "^1.1.4",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.7",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "@vitejs/plugin-vue": "^3.0.3",
+    "eslint": "^8.22.0",
+    "eslint-plugin-vue": "^9.3.0",
+    "vite": "^3.0.9"
   }
 }
